--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
       name="description"
       content="The Clients Database app simulates a company's clients database. You can view all clients and add, remove or edit a client. Also, based on the client's IP you can view its location on a map. If you wish, you can also search clients based on their names, id's, ip's and phone numbers."
     />
+    <meta name="title" property="og:title" content="Clients Database" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://i.ibb.co/j5XKSw9/clients-db-1.png"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="The Clients Database app simulates a company's clients database. You can view all clients and add, remove or edit a client. Also, based on the client's IP you can view its location on a map. If you wish, you can also search clients based on their names, id's, ip's and phone numbers."
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <link
